Refactor code for improved readability